create (index.html) page heading and nav menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
         <!-- Strong icons created by Freepik - Flaticon -->
     </head>
     <body>
+        <header>
+            <h1>StepMate</h1>
+
+            <nav>
+                <menu>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="record.html">Record</a></li>
+                    <li><a href="progress.html">Progress</a></li>
+                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                </menu>
+            </nav>
+
+        </header>
         <main></main>
         <footer></footer>
     </body>
